# split_vid_2_pic_segs

./: .gitignore  pyproject.toml
frames_output/: README.md
split_vid_2_pic_segs/main/: main.py
vids/: README.md
